--- a/npcs/klarion.yaml
+++ b/npcs/klarion.yaml
@@ -216,7 +216,6 @@ npc:
     #
     occupation:
     - Gardener / Groundskeeper
-    
 
     #
     # D & D classes (case insensitive):
@@ -297,7 +296,6 @@ npc:
     #
     tendencies:
 
-
     #
     # Languages the character speaks
     # (human, dwarvish, etc).
@@ -313,7 +311,6 @@ npc:
     - Common
     - Infernal
     - Druidic
-
 
     #
     # Factions:
@@ -385,7 +382,8 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    expressions:  "Plants are a precious as animals"
+    expressions:
+    - "Plants are a precious as animals"
 
     #
     # Mannerisms: what does the character do with their hands?  And eyes, mouth, etc.
@@ -409,7 +407,7 @@ npc:
     #
     motivations: |
       Loves nature, making a living doing what he loves
-      
+
     #
     # Passions:
     #
@@ -418,7 +416,7 @@ npc:
     #
     passions: |
       Horticulture
-      
+
     #
     # Vulnerabilities:
     #
@@ -427,7 +425,7 @@ npc:
     #
     vulnerabilities: |
       He's a simple man who prefers the company of plants to people. He's awkward around people
-      
+
     #
     # Secrets:
     #
@@ -436,8 +434,7 @@ npc:
     #
     secrets: | 
       He enjoys his own "fancy" mushrooms
-       
-      
+
   #
   # The D & D stats block:
   # All integers.
@@ -462,46 +459,48 @@ npc:
   #
   specialties:
     skills:
-   - - Tiefling Abilities:
-       - Darkvision: You can see in dim light within 60 feet of you as if it were bright light, and in Darkness as if it were dim light. You can’t discern color in Darkness, only Shades of Gray
-       - Hellish Resistance: You have Resistance to fire damage
-       - Asmodeal Legacy: You know the Thaumaturgy cantrip. When you reach 3rd Level, you can cast the Hellish Rebuke spell as a 2nd-level spell once with this trait and regain the ability to do so when you finish a Long Rest.
-                          When you reach 5th Level, you can cast the Darkness spell once with this trait and regain the ability to do so when you finish a Long Rest. Charisma is your Spellcasting Ability for these Spells
-         
-   - - Druid Abilities:
-       - Druidic: You know Druidic, the Secret language of druids. You can speak the language and use it to leave hidden messages. You and others who know this language automatically spot such a Message. Others spot the 
-                  message's presence with a successful DC 15 Wisdom (Perception) check but can't decipher it without magic.  
-       - Spellcasting: Spell DC 12
-         Cantrips: Mold Earth, Shape Water 
-         1st Level: Create Water, Speak with Animals, Goodberry
-       - Wild Shape: you can use your action to magically assume the shape of a beast that you have seen before. You can use this feature twice. You regain expended uses when you finish a short or Long Rest. Your druid level 
-                     determines the Beasts you can transform into, as shown in the Beast Shapes table. At 2nd Level, for example, you can transform into any beast that has a Challenge Rating of 1/4 or lower that doesn't have a 
-                     flying or Swimming speed. You can stay in a beast shape for a number of hours equal to half your druid level (rounded down). You then revert to your normal form unless you expend another use of this feature. 
-                     You can revert to your normal form earlier by using a Bonus Action on Your Turn. You automatically revert if you fall Unconscious, drop to 0 Hit Points, or die 
-                     
-   - - Circle of Spores Abilities:
-       - Halo of Spores: you are surrounded by invisible, necrotic spores that are harmless until you unleash them on a creature nearby. When a creature you can see moves into a space within 10 feet of you or starts its turn
-                         there, you can use your reaction to deal 1d4 necrotic damage to that creature unless it succeeds on a Constitution saving throw against your spell save DC. The necrotic damage increases to 1d6 at 6th
-                         level, 1d8 at 10th level, and 1d10 at 14th level  
-       - Spellcasting: Spell DC 12
-         2nd Level: Chill Touch
-       - Symbiotic Entity: you gain the ability to channel magic into your spores. As an action, you can expend a use of your Wild Shape feature to awaken those spores, rather than transforming into a beast form, and you gain 4
-                           temporary hit points for each level you have in this class. While this feature is active, you gain the following benefits;
-                           - When you deal your Halo of Spores damage, roll the damage die a second time and add it to the total.
-                           - Your melee weapon attacks deal an extra 1d6 necrotic damage to any target they hit.
-                           These benefits last for 10 minutes, until you lose all these temporary hit points. or until you use your Wild Shape again      
-           
+    - Tiefling Abilities:
+      - Darkvision: You can see in dim light within 60 feet of you as if it were bright light, and in Darkness as if it were dim light. You can’t discern color in Darkness, only Shades of Gray
+        Hellish Resistance: You have Resistance to fire damage
+        Asmodeal Legacy: You know the Thaumaturgy cantrip. When you reach 3rd Level, you can cast the Hellish Rebuke spell as a 2nd-level spell once with this trait and regain the ability to do so when you finish a Long Rest.
+                         When you reach 5th Level, you can cast the Darkness spell once with this trait and regain the ability to do so when you finish a Long Rest. Charisma is your Spellcasting Ability for these Spells  
+      Druid Abilities:
+      - Druidic: You know Druidic, the Secret language of druids. You can speak the language and use it to leave hidden messages. You and others who know this language automatically spot such a Message. Others spot the 
+                 message's presence with a successful DC 15 Wisdom (Perception) check but can't decipher it without magic.  
+        Spellcasting: 
+        - Description: Spell DC 12
+          Cantrips: Mold Earth, Shape Water 
+          1st Level: Create Water, Speak with Animals, Goodberry
+        Wild Shape: you can use your action to magically assume the shape of a beast that you have seen before. You can use this feature twice. You regain expended uses when you finish a short or Long Rest. Your druid level 
+                    determines the Beasts you can transform into, as shown in the Beast Shapes table. At 2nd Level, for example, you can transform into any beast that has a Challenge Rating of 1/4 or lower that doesn't have a 
+                    flying or Swimming speed. You can stay in a beast shape for a number of hours equal to half your druid level (rounded down). You then revert to your normal form unless you expend another use of this feature. 
+                    You can revert to your normal form earlier by using a Bonus Action on Your Turn. You automatically revert if you fall Unconscious, drop to 0 Hit Points, or die
+      Circle of Spores Abilities:
+      - Halo of Spores: you are surrounded by invisible, necrotic spores that are harmless until you unleash them on a creature nearby. When a creature you can see moves into a space within 10 feet of you or starts its turn
+                        there, you can use your reaction to deal 1d4 necrotic damage to that creature unless it succeeds on a Constitution saving throw against your spell save DC. The necrotic damage increases to 1d6 at 6th
+                        level, 1d8 at 10th level, and 1d10 at 14th level  
+        Spellcasting: 
+        - Description: Spell DC 12
+          2nd Level: Chill Touch
+        Symbiotic Entity: 
+        - Description: you gain the ability to channel magic into your spores. As an action, you can expend a use of your Wild Shape feature to awaken those spores, rather than transforming into a beast form, and you gain 4
+          Additional Information:
+          - temporary hit points for each level you have in this class. While this feature is active, you gain the following benefits;
+          - When you deal your Halo of Spores damage, roll the damage die a second time and add it to the total.
+          - Your melee weapon attacks deal an extra 1d6 necrotic damage to any target they hit.
+          - These benefits last for 10 minutes, until you lose all these temporary hit points. or until you use your Wild Shape again      
+
     special-abilities:
        - Proficiecies: Nature, Medicine, Survival
        - Feats: N/A 
-       
+
     attacks: |
       1 attack with garden implement or unaramed strike
     combat-tactics: |
       Will wild shape into something small and fast and run away from any trouble
     special-equipment:
       - various gardening tools
-      
+
   profile:
 
     #
@@ -515,7 +514,7 @@ npc:
       Klarion is a simple man who grew up on his own, living off of the land. As his gifts with plants and fungi grew, he was able to secure work as the gardener and groundskeeper for the large estate at the edge of town. He's
       good at his job and loves to work with the gardens. He's done a sufficient enough job that he gets very little interference from his boss and mostly does what he wants. He rarely goes into town proper and deals with other
       people as little as possible
-      
+
     #
     # Personality (or something like that):
     # Expand on the introduction, appearance, expressions, mannerisms, etc.
@@ -527,32 +526,3 @@ npc:
     personality: |
       Klarion likes his solitude. He prefers his plants and his garden to people and will generally go out of his way to avoid them. He is a pleasant fellow though and will do his best to try to be helpful if approached in a
       non-aggressive manner. How helpful he can be is up for grabs however, because he is often high on his special supply of hallucinogenic mushrooms that he grows himself.
-  #
-  # Content that does not get displayed, but could be useful
-  # to humans.  Includes review comments, notes about what to
-  # do for the NPC art, or whatever else we need.
-  #
-  # Optional.
-  #
-  uncategorized:
-  - uncategorized_template_1: TEMPLATE
-  - uncategorized_template_2: |
-    TEMPLATE
-    MORE TEMPLATE
-  - uncategorized_template_3: TEMPLATE
----
-
-#
-# ...Multiple NPCs can be included in one file,
-# separated by --- dividers...
-#
-© 2021 GitHub, Inc.
-Terms
-Privacy
-Security
-Status
-Docs
-Contact GitHub
-Pricing
-API
-Training
